Alter menu bar to contain TYO and DP

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc sticky-nav b-divider" id="bloc-0">
+<div class="bloc sticky-nav b-divider bgc-white l-bloc" id="bloc-0">
 	<div class="container">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -36,22 +36,22 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1">
+			<div class="navbar-collapse navbar-1 collapse">
 				<ul class="site-navigation nav navbar-nav list-sp-md">
 					<li>
-						<a href="index.html" class="ltc-outer-space">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="about.html" class="ltc-outer-space">About</a>
+						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="projects.html" class="ltc-outer-space">Projects</a>
+						<a href="demo.html">Demo</a>
 					</li>
 					<li>
-						<a href="datasets.html" class="ltc-outer-space">Datasets</a>
+						<a href="train-your-own.html">Train Your Own</a>
 					</li>
 					<li>
-						<a href="pretrained-models.html" class="ltc-outer-space">Pretrained Models</a>
+						<a href="datasets-&amp;-pretrained-models.html">Datasets &amp; Pretrained Models</a>
 					</li>
 					<li>
 					</li>
@@ -87,7 +87,7 @@
 		<div class="row bgc-lavender-gray">
 			<div class="col-sm-12">
 				<p class="text-center  mg-lg">
-					Deep learning zoo is a place where everybody can easily play with current cutting-edge deep learning applications, without the need of installing tedious dependencies or acquiring expensive GPU. We allow you to try these applications in our cloud, and provide you with complete training approaches for you to train your own datasets. Also, we have collected public datasets and pretrained models over the Internet to make things even easier for you. No matter what your background is, you can experiment with deep learning in only a few buttons.
+					Deep learning zoo is a place where everybody can easily play with current cutting-edge deep learning applications, without the need of installing tedious dependencies or acquiring an expensive GPU. We allow you to try these applications in our cloud, and provide you with complete training approaches for your own datasets. Also, we have collected public datasets and pretrained models over the Internet to make things even easier for you. No matter what your background is, you can experiment with deep learning in only a few minutes.
 				</p>
 			</div>
 		</div>
@@ -101,22 +101,22 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h3 class="mg-md ">
-					Testing
+					<a href="demo.html">Demo</a><br>
 				</h3>
 				<p>
 					No more hours of installing libraries. No more thousands of pounds of GPU. If you are intrigued by a deel learning paper, you can start test it out right away by sending inputs to our cloud! We do all the dirty work for you, while you can focus on your research.
 				</p>
 				<h3 class="mg-md ">
-					Training (Coming Soon)
+					<a href="train-your-own.html">Train you own (Coming Soon)</a><br>
 				</h3>
 				<p>
-					For each user, you can train their neural networks by simply uploading your data to our cloud, where you have the options of setting hyperparmeters and choosing your favourite neural networks frameworks. We want to make your applications with your own data to be up and running as easy as possible.
+					You can train our demo deep learing projects by simply uploading your data to our cloud, where you can interact with our graphical interface with the options of setting hyperparmeters and choosing your favourite neural networks frameworks. We want to make your applications with your own data to be up and running as easy as possible.
 				</p>
 				<h3 class="mg-md ">
-					Datasets and Pretrained models (Coming Soon)
+					<a href="datasets-&amp;-pretrained-models.html">Datasets and Pretrained models (Coming Soon)</a><br>
 				</h3>
 				<p>
-					v
+					Datasets and pretrained models are currently scattered over the Internet, making it difficult for you to find the right ones. We collect as many as possible, so that you can have the data and a great starting point for your project. Also, for each pretrained model, we aim to make it available for every frameworks.
 				</p>
 			</div>
 		</div>
