--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc sticky-nav b-divider" id="bloc-0">
+<div class="bloc sticky-nav b-divider bgc-white l-bloc" id="bloc-0">
 	<div class="container">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -36,22 +36,22 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1">
+			<div class="navbar-collapse navbar-1 collapse">
 				<ul class="site-navigation nav navbar-nav list-sp-md">
 					<li>
-						<a href="index.html" class="ltc-outer-space">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="about.html" class="ltc-outer-space">About</a>
+						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="projects.html" class="ltc-outer-space">Projects</a>
+						<a href="demo.html">Demo</a>
 					</li>
 					<li>
-						<a href="datasets.html" class="ltc-outer-space">Datasets</a>
+						<a href="train-your-own.html">Train Your Own</a>
 					</li>
 					<li>
-						<a href="pretrained-models.html" class="ltc-outer-space">Pretrained Models</a>
+						<a href="datasets-&amp;-pretrained-models.html">Datasets &amp; Pretrained Models</a>
 					</li>
 					<li>
 					</li>
@@ -73,27 +73,27 @@
 					About
 				</h2>
 				<p>
-					Deep learning sounds like really high-tech, while in fact it can be really easy and fun. We hope that this website can help people catch up with the frontier of deep learning research, quicker and better, and inspire people to come up with more cool deep learning stuffs. We aim to lower the entry barrier of deep learning, so that you don&rsquo;t need to have a background in computer science or machine learning to get involved in deep learning. And even when you do have these backgrounds, you may still currently find it tedious to just get started. The current problems are:
+					Deep learning sounds really high-tech, while in fact it can be easy and fun. We hope that this website can help people catch up with the frontier of deep learning research, quicker and better, while inspiring people to come up with cool deep learning applications. We aim to lower the entry barrier of deep learning, so that you don&rsquo;t need to have a background in computer science or machine learning to get involved in deep learning. Even when you do have these backgrounds, you may still find it tedious to just get started. The current problems are:
 				</p>
 				<ul>
 					<li>
 						<p>
-							It is tedious to read science papers and reproduce them from scratch. Sometimes you just want to know the abstract and experiment them.
+							It is tedious to read science papers and reproduce them from scratch. Sometimes you just want to know the abstract and experiment with them.
 						</p>
 					</li>
 					<li>
 						<p>
-							It is tedious to install all the libraries and configure your PC correctly. It is time that should be better spent.
+							It is tedious to install all the libraries and configure your PC correctly. This is time that should be better spent.
 						</p>
 					</li>
 					<li>
 						<p>
-							It is tedious to find the right dataset and pretrained models. Public datasets are scattered all over Internet and each pretrained model is suitable for only one deep learning frameworks.
+							It is tedious to find the right dataset and pretrained models. Public datasets are scattered all over the Internet and each pretrained model is suitable for only one deep learning framework.
 						</p>
 					</li>
 				</ul>
 				<p>
-					If these are the problems that have been bothering you, this is the right place for you. Currently, we just launch a testing version, where we have selected 5 cool deep learning projects for you to try them out in our cloud. We will be launching as many projects and training modules as possible soon, please stay tuned!
+					If these are the problems that have been bothering you, you have come to the right place. Currently, we are just launching a test version, for which we have selected 5 cool deep learning projects for you to try them out in our cloud. We will be launching more projects and training modules soon, please stay tuned!
 				</p>
 			</div>
 		</div>
