--- a/neural-storyteller.html
+++ b/neural-storyteller.html
@@ -29,7 +29,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc sticky-nav b-divider" id="bloc-0">
+<div class="bloc sticky-nav b-divider bgc-white l-bloc" id="bloc-0">
 	<div class="container">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -38,22 +38,22 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="collapse navbar-collapse navbar-1">
+			<div class="navbar-collapse navbar-1 collapse">
 				<ul class="site-navigation nav navbar-nav list-sp-md">
 					<li>
-						<a href="index.html" class="ltc-outer-space">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="about.html" class="ltc-outer-space">About</a>
+						<a href="about.html">About</a>
 					</li>
 					<li>
-						<a href="projects.html" class="ltc-outer-space">Projects</a>
+						<a href="demo.html">Demo</a>
 					</li>
 					<li>
-						<a href="datasets.html" class="ltc-outer-space">Datasets</a>
+						<a href="train-your-own.html">Train Your Own</a>
 					</li>
 					<li>
-						<a href="pretrained-models.html" class="ltc-outer-space">Pretrained Models</a>
+						<a href="datasets-&amp;-pretrained-models.html">Datasets &amp; Pretrained Models</a>
 					</li>
 					<li>
 					</li>
@@ -66,8 +66,8 @@
 </div>
 <!-- bloc-0 END -->
 
-<!-- bloc-18 -->
-<div class="bloc bgc-white l-bloc" id="bloc-18">
+<!-- bloc-17 -->
+<div class="bloc bgc-white l-bloc" id="bloc-17">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -81,10 +81,10 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-18 END -->
+<!-- bloc-17 END -->
 
-<!-- bloc-19 -->
-<div class="bloc bgc-white l-bloc" id="bloc-19">
+<!-- bloc-18 -->
+<div class="bloc bgc-white l-bloc" id="bloc-18">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -115,7 +115,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-19 END -->
+<!-- bloc-18 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
