--- a/automated-colorization.html
+++ b/automated-colorization.html
@@ -102,12 +102,41 @@
 					Currently, training method has not been updated yet, please stay tuned to check it out later. Now, why don't you send your image to the neural network to try it!
 				</p>
 				
-					<form action="/bw2color" method="post" enctype="multipart/form-data" class="">
-	Select an image: <input type="file" name="image">
-    <input type="submit" value="Submit">
-</form>
+					<form action="/bw2color" method="post" enctype="multipart/form-data" class="" onsubmit="AJAXSubmit(this); return false;">
+						Select an image: <input type="file" name="image">
+					    <input type="submit" value="Submit">
+					</form>
 					
-				<img src="img/img_holder.png" class="img-responsive img-frame-lg" /><a href="https://arxiv.org/abs/1603.06668" class="a-btn a-block" target="_blank">Arxiv link</a> <a href="https://github.com/richzhang/colorization" class="a-btn a-block" target="_blank">Github link</a>
+				<div id="123">
+                                <img src="img/img_holder.png" class="img-responsive img-frame-lg" />
+                                </div>
+                                <script>
+                                "use strict";
+
+                                        function ajaxSuccess () {
+                                          console.log(this.responseText);
+                                        }
+
+                                        function AJAXSubmit (oFormElement) {
+                                                if (!oFormElement.action) { return; }
+
+                                                var oReq = new XMLHttpRequest();
+                                                oReq.onload = ajaxSuccess;
+                                                oReq.onreadystatechange = 
+                                                function()
+                                                {
+                                                        if (oReq.readyState == 4 && oReq.status == 200)
+                                                        {
+                                                                document.getElementById('123').innerHTML = oReq.responseText;
+                                                        } else
+                                                        {
+                                                                document.getElementById('123').innerHTML = '<img src="img/waiting_img.png" class="img-responsive img-frame-lg" />';
+                                                        }
+                                                }
+                                                oReq.open("post", oFormElement.action);
+                                                oReq.send(new FormData(oFormElement));
+                                        }                                </script>
+				<a href="https://arxiv.org/abs/1603.06668" class="a-btn a-block" target="_blank">Arxiv link</a> <a href="https://github.com/richzhang/colorization" class="a-btn a-block" target="_blank">Github link</a>
 			</div>
 			<div class="col-sm-6">
 					<img src="img/colorization.png" class="img-responsive" />
