--- a/demo.html
+++ b/demo.html
@@ -51,7 +51,7 @@
 						<a href="train-your-own.html">Train Your Own</a>
 					</li>
 					<li>
-						<a href="datasets-&amp;-pretrained-models.html">Datasets &amp; Pretrained Models</a>
+						<a href="datasets-and-pretrained-models.html">Datasets &amp; Pretrained Models</a>
 					</li>
 					<li>
 					</li>
