--- a/image-recognition.html
+++ b/image-recognition.html
@@ -130,8 +130,7 @@
                                                                 document.getElementById('123').innerHTML = oReq.responseText;
                                                         } else
                                                         {
-                                                                document.getElementById('123').inner
-HTML = '<img src="img/waiting_img.png" class="img-responsive img-frame-lg" />';
+                                                                document.getElementById('123').innerHTML = '<img src="img/waiting_img.png" class="img-responsive img-frame-lg" />';
                                                         }
                                                 }
                                                 oReq.open("post", oFormElement.action);
